# nyra

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Makefile  README.md  check_async  hello.txt  sst_test_tmp.sst  system_info.txt
.cargo/: config.toml
agents/: skill.md
cli/: Cargo.toml
cli/src/: artifacts.rs  bind.rs  c_cache.rs  c_lib.rs  c_registry.rs  daemon.rs  link.rs  llvm_obj.rs  llvm_tools.rs  main.rs  nyrapkg.rs  prebuilt_rt.rs  prebuilt_tls.rs  prebuilt_tls_native.rs  race.rs  repl.rs  staticlib_archive.rs  target.rs  timings.rs  ui.rs  watch.rs
cli/src/app/: args.rs  mod.rs  session.rs
cli/src/commands/: bind.rs  check.rs  inspect.rs  mod.rs  pkg.rs  test.rs
compiler/const_eval/: Cargo.toml
compiler/const_eval/src/: comptime.rs  lib.rs
compiler/driver/: Cargo.toml
compiler/driver/src/: cache.rs  check_cache.rs  crate_incremental.rs  incremental_codegen.rs  lib.rs  signature_cache.rs
compiler/driver/tests/: abi_manifest.rs  abi_symbols.rs  advanced_ownership.rs  codegen_snapshots.rs  conformance.rs  diagnostics_snapshots.rs  examples_corpus.rs  integration.rs  ownership_inspect.rs  pkg_prune.rs  unsafe_memory.rs
compiler/driver/tests/common/: mod.rs
compiler/driver/tests/conformance/: async_v1.rs  borrowck.rs  comptime.rs  inference.rs  language_gaps.rs  ownership.rs  struct_serde.rs  tls.rs  trait.rs  windows.rs  workspace.rs
compiler/driver/tests/snapshots/: codegen_snapshots__snap_abs_intrinsic.snap  codegen_snapshots__snap_abs_intrinsic.snap.new  codegen_snapshots__snap_array_length.snap  codegen_snapshots__snap_array_literal.snap  codegen_snapshots__snap_array_sort.snap  codegen_snapshots__snap_array_sort_by.snap  codegen_snapshots__snap_async_fn.snap  codegen_snapshots__snap_async_fn.snap.new  codegen_snapshots__snap_bool_not.snap  codegen_snapshots__snap_break_while.snap  codegen_snapshots__snap_clone_method.snap  codegen_snapshots__snap_comparison_chain.snap  codegen_snapshots__snap_const_fold.snap  codegen_snapshots__snap_continue_while.snap  codegen_snapshots__snap_copy_i32.snap  codegen_snapshots__snap_date_builtin.snap  codegen_snapshots__snap_defer_return.snap  codegen_snapshots__snap_enum_match.snap  codegen_snapshots__snap_enum_match.snap.new  codegen_snapshots__snap_for_in_array.snap  codegen_snapshots__snap_for_range.snap  codegen_snapshots__snap_generic_call.snap  codegen_snapshots__snap_hello.snap  codegen_snapshots__snap_if_else.snap  codegen_snapshots__snap_impl_method.snap  codegen_snapshots__snap_impl_method.snap.new  codegen_snapshots__snap_logical_and.snap  codegen_snapshots__snap_math_add.snap  codegen_snapshots__snap_modulo.snap  codegen_snapshots__snap_negation.snap  codegen_snapshots__snap_return_value.snap  codegen_snapshots__snap_spawn.snap  codegen_snapshots__snap_string_length.snap  codegen_snapshots__snap_string_move.snap  codegen_snapshots__snap_string_split.snap  codegen_snapshots__snap_struct_literal.snap  codegen_snapshots__snap_struct_literal.snap.new  codegen_snapshots__snap_template_string.snap  codegen_snapshots__snap_trim.snap  codegen_snapshots__snap_tuple_literal.snap  (+32 more)
compiler/resolve/: Cargo.toml
compiler/resolve/src/: lib.rs  merge.rs  parse_cache.rs  prelude.rs  symbols.rs  unit_map.rs
docs/: abi-manifest.toml  architecture.md  bindings.md  c-bindgen.md  contributor-map.md  make-and-generators.md  os.md  roadmap-stable.md  stability-v1.md  status.md  testing-runbook.md
editor/: README.md
examples/: async_channel_select.ny  async_runtime_official.ny  async_runtime_official.typed.ny  errors_official.ny  errors_official.typed.ny  net_http_smoke.ny  optional_chain_smoke.ny  parallel_for.ny  serde_json_pkg.ny  stdlib_priority_smoke.ny  stdlib_runtime_smoke.ny  stdlib_runtime_smoke.typed.ny  trait_dyn_ab.ny  trait_dyn_ab.typed.ny
grammar/: README.md  nyra.tmLanguage.json
lsm_flush_tmp/: lsm.l0.0.sst
lsm_test_tmp/: lsm.wal
lsp/: Cargo.toml
lsp/src/: code_actions.rs  code_lens.rs  diagnostics.rs  lib.rs
make/: README.md  build.mk  common.mk  generators.mk  nyra.mk  release.mk  smoke.mk  test-all.mk  test-linux.mk  test-macos.mk  test-platform-ci.mk  test-platform.mk  test-windows.mk  test.mk
pkg/: Cargo.toml
pkg/src/: lib.rs  lockfile.rs  rust_bridge.rs
rt-tls/: Cargo.toml
rt-tls-native/: Cargo.toml
rt-tls-native/src/: lib.rs
rt-tls/src/: lib.rs
scripts/: install.ps1  install.sh
skills/: guidelines.md  skill.md
stdlib/: README.md  alloc.ny  builtins_json.ny  builtins_math.ny  builtins_string.ny  error.ny  fs.ny  http.ny  io.ny  json.ny  map.ny  math.ny  mem.ny  nyra_rt.h  os.ny  path.ny  process.ny  random.ny  result.ny  strings.ny  testing.ny  time.ny  tls.ny  vec.ny  vec_str.ny
webDocs/: CHANGELOG.md  README.md  ai-skill.html  async.html  beginner-01-first-program.html  beginner-02-variables.html  beginner-03-operators.html  beginner-04-decisions.html  beginner-05-loops.html  beginner-06-functions.html  beginner-07-structs-enums.html  beginner-08-mini-project.html  beginner-track.html  bindings.html  c-bindgen.html  changelog.html  closures.html  comptime.html  concurrency.html  diagnostics.html  editor-setup.html  escape-analysis.html  ffi-abi.html  generics.html  getting-started.html  imports.html  index.html  install.html  keywords.html  language-basics.html  language.html  learn-arrays.html  learn-booleans.html  learn-borrowing.html  learn-comments.html  learn-constants.html  learn-data-structures.html  learn-for.html  (+44 more)
(+1676 files in other folders)
