[package]
name = "pkg"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Nyra manifest parsing, lockfile verification, and native link resolution"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
nyra-bindgen = { path = "../bindgen" }
