[package]
name = "nyra-rt-tls-native"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Nyra TLS client ABI backed by OS native TLS (Secure Transport / SChannel / OpenSSL)"

[lib]
name = "nyra_rt_tls_native"
crate-type = ["staticlib"]
test = false

[dependencies]
libc = "0.2"
native-tls = "0.2"
