[package]
name = "const_eval"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Nyra compile-time constant evaluation"

[dependencies]
ast = { path = "../ast" }
errors = { path = "../errors" }
monomorph = { path = "../monomorph" }

[dev-dependencies]
lexer = { path = "../lexer" }
parser = { path = "../parser" }
